--- a/Food Delivery/Food Delivery/MVP/View/Cells/Appetizers/AppetizersCollectionViewCell.xib
+++ b/Food Delivery/Food Delivery/MVP/View/Cells/Appetizers/AppetizersCollectionViewCell.xib
@@ -20,7 +20,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b5U-r8-fIO" customClass="CardView" customModule="Food_Delivery" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="330" height="100"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hamburger" translatesAutoresizingMaskIntoConstraints="NO" id="48o-Yb-cX8">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hamburger" translatesAutoresizingMaskIntoConstraints="NO" id="48o-Yb-cX8" customClass="RoundedImageView" customModule="Food_Delivery" customModuleProvider="target">
                                 <rect key="frame" x="16" y="16" width="68" height="68"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="68" id="3Cd-PP-i8y"/>
