--- a/Food Delivery/Food Delivery/Base.lproj/Main.storyboard
+++ b/Food Delivery/Food Delivery/Base.lproj/Main.storyboard
@@ -189,7 +189,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hamburger" translatesAutoresizingMaskIntoConstraints="NO" id="YeT-AI-onY">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hamburger" translatesAutoresizingMaskIntoConstraints="NO" id="YeT-AI-onY">
                                 <rect key="frame" x="115" y="266" width="200" height="200"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="4nM-T7-t1U"/>
@@ -223,6 +223,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="hamburger" width="512" height="512"/>
+        <image name="hamburger" width="612" height="409"/>
     </resources>
 </document>
