--- a/Food Delivery/Food Delivery/Base.lproj/Main.storyboard
+++ b/Food Delivery/Food Delivery/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="0.0" y="103" width="430" height="829"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="yra-C1-ecL">
-                                        <rect key="frame" x="0.0" y="0.0" width="430" height="726"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="430" height="734"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9a4-38-udn">
                                                 <rect key="frame" x="0.0" y="0.0" width="430" height="170"/>
@@ -65,7 +65,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ai4-lT-eF7">
-                                                <rect key="frame" x="0.0" y="190" width="430" height="348"/>
+                                                <rect key="frame" x="0.0" y="190" width="430" height="168"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Категории" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ySa-Ss-VPU">
                                                         <rect key="frame" x="16" y="16" width="398" height="24"/>
@@ -77,10 +77,10 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <collectionView multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" springLoaded="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ics-kV-IGM">
-                                                        <rect key="frame" x="0.0" y="48" width="430" height="300"/>
+                                                        <rect key="frame" x="0.0" y="48" width="430" height="120"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="height" constant="300" id="ABK-VO-UqM"/>
+                                                            <constraint firstAttribute="height" constant="120" id="ABK-VO-UqM"/>
                                                         </constraints>
                                                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="0.0" id="Avx-mW-Sjw">
                                                             <size key="itemSize" width="128" height="128"/>
@@ -107,7 +107,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kyX-Uo-Nji">
-                                                <rect key="frame" x="0.0" y="558" width="430" height="168"/>
+                                                <rect key="frame" x="0.0" y="378" width="430" height="168"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Закуски" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ken-6o-bNt">
                                                         <rect key="frame" x="16" y="16" width="398" height="24"/>
@@ -144,6 +144,44 @@
                                                     <constraint firstAttribute="trailing" secondItem="Ken-6o-bNt" secondAttribute="trailing" constant="16" id="oYn-KS-5y4"/>
                                                 </constraints>
                                             </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BVA-XH-kGM">
+                                                <rect key="frame" x="0.0" y="566" width="430" height="168"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Бургеры" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iwH-K5-nt7">
+                                                        <rect key="frame" x="16" y="16" width="398" height="24"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="24" id="gDj-Bb-8UH"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                                        <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <collectionView multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="FKo-Eb-hRH">
+                                                        <rect key="frame" x="0.0" y="48" width="430" height="120"/>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="120" id="iUv-pO-Mps"/>
+                                                        </constraints>
+                                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Yg1-kD-lyG">
+                                                            <size key="itemSize" width="128" height="128"/>
+                                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                            <inset key="sectionInset" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
+                                                        </collectionViewFlowLayout>
+                                                        <cells/>
+                                                    </collectionView>
+                                                </subviews>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstItem="FKo-Eb-hRH" firstAttribute="top" secondItem="iwH-K5-nt7" secondAttribute="bottom" constant="8" id="4mw-mF-tU8"/>
+                                                    <constraint firstItem="iwH-K5-nt7" firstAttribute="top" secondItem="BVA-XH-kGM" secondAttribute="top" constant="16" id="DKy-MI-BXD"/>
+                                                    <constraint firstAttribute="trailing" secondItem="FKo-Eb-hRH" secondAttribute="trailing" id="ESK-D8-hBj"/>
+                                                    <constraint firstItem="iwH-K5-nt7" firstAttribute="leading" secondItem="BVA-XH-kGM" secondAttribute="leading" constant="16" id="ONH-ec-1x7"/>
+                                                    <constraint firstItem="FKo-Eb-hRH" firstAttribute="leading" secondItem="BVA-XH-kGM" secondAttribute="leading" id="OWk-VE-4Ly"/>
+                                                    <constraint firstAttribute="bottom" secondItem="FKo-Eb-hRH" secondAttribute="bottom" id="QqH-TM-Mhm"/>
+                                                    <constraint firstAttribute="trailing" secondItem="iwH-K5-nt7" secondAttribute="trailing" constant="16" id="x9z-eW-0oI"/>
+                                                </constraints>
+                                            </view>
                                         </subviews>
                                     </stackView>
                                 </subviews>
@@ -175,6 +213,7 @@
                         <outlet property="AppetizersCollectionView" destination="jdT-bP-lBE" id="JP2-xL-7vt"/>
                         <outlet property="BannerCollectionView" destination="mLg-CW-YW6" id="6lh-zV-tHd"/>
                         <outlet property="CategoriesCollectionView" destination="ics-kV-IGM" id="6X7-9P-S5v"/>
+                        <outlet property="HamburgersCollectionView" destination="FKo-Eb-hRH" id="2Fp-ze-A7v"/>
                         <outlet property="ScrollView" destination="kot-wQ-sMa" id="PUQ-gR-Gnx"/>
                     </connections>
                 </viewController>
