--- a/Food Delivery/Food Delivery/Base.lproj/Main.storyboard
+++ b/Food Delivery/Food Delivery/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="0.0" y="103" width="430" height="829"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="yra-C1-ecL">
-                                        <rect key="frame" x="0.0" y="0.0" width="430" height="922"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="430" height="1110"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9a4-38-udn">
                                                 <rect key="frame" x="0.0" y="0.0" width="430" height="170"/>
@@ -220,6 +220,44 @@
                                                     <constraint firstItem="opP-rs-epN" firstAttribute="top" secondItem="UvD-1d-7iZ" secondAttribute="top" constant="16" id="w30-p8-jjK"/>
                                                 </constraints>
                                             </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vjd-Ur-sX1">
+                                                <rect key="frame" x="0.0" y="942" width="430" height="168"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Пицца" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JI9-zP-8ZR">
+                                                        <rect key="frame" x="16" y="16" width="398" height="24"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="24" id="rf1-wn-kq3"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                                        <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <collectionView multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="PAm-lk-F2Y">
+                                                        <rect key="frame" x="0.0" y="48" width="430" height="120"/>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="120" id="sKW-lx-U3c"/>
+                                                        </constraints>
+                                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="uKc-aa-HY2">
+                                                            <size key="itemSize" width="128" height="128"/>
+                                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                            <inset key="sectionInset" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
+                                                        </collectionViewFlowLayout>
+                                                        <cells/>
+                                                    </collectionView>
+                                                </subviews>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstItem="JI9-zP-8ZR" firstAttribute="top" secondItem="vjd-Ur-sX1" secondAttribute="top" constant="16" id="64y-xQ-QFb"/>
+                                                    <constraint firstItem="PAm-lk-F2Y" firstAttribute="top" secondItem="JI9-zP-8ZR" secondAttribute="bottom" constant="8" id="Adb-Yc-eei"/>
+                                                    <constraint firstItem="PAm-lk-F2Y" firstAttribute="leading" secondItem="vjd-Ur-sX1" secondAttribute="leading" id="Ups-YB-Vbo"/>
+                                                    <constraint firstAttribute="trailing" secondItem="JI9-zP-8ZR" secondAttribute="trailing" constant="16" id="Y5I-xM-USw"/>
+                                                    <constraint firstItem="JI9-zP-8ZR" firstAttribute="leading" secondItem="vjd-Ur-sX1" secondAttribute="leading" constant="16" id="dP8-Hf-b3W"/>
+                                                    <constraint firstAttribute="bottom" secondItem="PAm-lk-F2Y" secondAttribute="bottom" id="oM0-5b-Qvg"/>
+                                                    <constraint firstAttribute="trailing" secondItem="PAm-lk-F2Y" secondAttribute="trailing" id="uPF-7G-Tbw"/>
+                                                </constraints>
+                                            </view>
                                         </subviews>
                                     </stackView>
                                 </subviews>
@@ -267,6 +305,7 @@
                         <outlet property="ColaCollectionView" destination="e32-5z-Re5" id="SkU-oq-tBC"/>
                         <outlet property="HamburgersCollectionView" destination="FKo-Eb-hRH" id="2Fp-ze-A7v"/>
                         <outlet property="MicrophoneButton" destination="U7O-Wa-tRP" id="CmL-Dh-INN"/>
+                        <outlet property="PizzaCollectionView" destination="PAm-lk-F2Y" id="MXr-s0-RNY"/>
                         <outlet property="ScrollView" destination="kot-wQ-sMa" id="PUQ-gR-Gnx"/>
                     </connections>
                 </viewController>
